--- a/app/views/spree/shared/_main_nav_bar.html.erb
+++ b/app/views/spree/shared/_main_nav_bar.html.erb
@@ -27,24 +27,24 @@
                         <li class="dropdown">
                           <a href="#" class="dropdown-toggle" data-toggle="dropdown"><small><i class="fa fa-phone"></i> Call Us 1-877-549-2069 <span class="caret"></span></small></a>
             				<ul class="dropdown-menu">
-<li><a href="tel:+810345895010"><strong><img src="{{'jp.gif' | asset_url }}" alt="Japan" class=""> Tokyo, Japan  </strong> +81 03 4589 5010</a></li>
-<li><a href="tel:+18775492069"><strong><img src="{{'us.gif' | asset_url }}" alt="USA" class=""> United States <small class='text-muted'>(Toll Free)</small>  </strong> +1 (877) 549-2069</a></li>
-<li><a href="tel:+18775492069"><strong><img src="{{'ca.gif' | asset_url }}" alt="Canada" class=""> Canada <small class='text-muted'>(Toll Free)</small>  </strong> +1 (877) 549-2069</a></li>
-<li><a href="tel:+61388997533"><strong><img src="{{'au.gif' | asset_url }}" alt="Australia" class=""> Australia  </strong> +61 3 8899 7533</a></li>
-<li><a href="tel:+448008085791"><strong><img src="{{'gb.gif' | asset_url }}" alt="United Kingdom" class=""> United Kingdom <small class='text-muted'>(Toll Free)</small>  </strong> +44 800 808 5791</a></li>
-<li><a href="tel:+43720884764"><strong><img src="{{'at.gif' | asset_url }}" alt="Austria" class=""> Austria  </strong> +43 720 884 764</a></li>
-<li><a href="tel:+3278481705"><strong><img src="{{'be.gif' | asset_url }}" alt="Belgium" class=""> Belgium  </strong> +32 78 481 705</a></li>
-<li><a href="tel:+4589883294"><strong><img src="{{'dk.gif' | asset_url }}" alt="Denmark" class=""> Denmark  </strong> +45 89 88 32 94</a></li>
-<li><a href="tel:+358753251385"><strong><img src="{{'fi.gif' | asset_url }}" alt="Finland" class=""> Finland  </strong> +358 75 325 1385</a></li>
-<li><a href="tel:+33975189179"><strong><img src="{{'fr.gif' | asset_url }}" alt="France" class=""> France  </strong> +33 9 75 18 91 79</a></li>
-<li><a href="tel:+85258084534"><strong><img src="{{'hk.gif' | asset_url }}" alt="Hong Kong" class=""> Hong Kong  </strong> +852 58084534</a></li>
-<li><a href="tel:+353766805787"><strong><img src="{{'ie.gif' | asset_url }}" alt="Ireland" class=""> Ireland  </strong> +353 76 680 5787</a></li>
-<li><a href="tel:+390811892137"><strong><img src="{{'it.gif' | asset_url }}" alt="Italy" class=""> Italy  </strong> +39 081 189 2137</a></li>
-<li><a href="tel:+31858884391"><strong><img src="{{'nl.gif' | asset_url }}" alt="Netherlands" class=""> Netherlands  </strong> +31 85 888 4391</a></li>
-<li><a href="tel:+6478083142"><strong><img src="{{'nz.gif' | asset_url }}" alt="New Zealand" class=""> New Zealand  </strong> +64 7 808 3142</a></li>
-<li><a href="tel:+48618803256"><strong><img src="{{'pl.gif' | asset_url }}" alt="ydowo, Poland" class=""> Poland  </strong> +48 61 880 32 56</a></li>
-<li><a href="tel:+351308802535"><strong><img src="{{'pt.gif' | asset_url }}" alt="Portugal" class=""> Portugal  </strong> +351 308 802 535</a></li>
-<li><a href="tel:+46108848529"><strong><img src="{{'se.gif' | asset_url }}" alt="Sweden" class=""> Sweden  </strong> +46 10 8848529</a></li>
+<li><a href="tel:+810345895010"><strong><img src="http://cdn.tokyowheel.comjp.gif" alt="Japan" class=""> Tokyo, Japan  </strong> +81 03 4589 5010</a></li>
+<li><a href="tel:+18775492069"><strong><img src="http://cdn.tokyowheel.comus.gif" alt="USA" class=""> United States <small class='text-muted'>(Toll Free)</small>  </strong> +1 (877) 549-2069</a></li>
+<li><a href="tel:+18775492069"><strong><img src="http://cdn.tokyowheel.comca.gif" alt="Canada" class=""> Canada <small class='text-muted'>(Toll Free)</small>  </strong> +1 (877) 549-2069</a></li>
+<li><a href="tel:+61388997533"><strong><img src="http://cdn.tokyowheel.comau.gif" alt="Australia" class=""> Australia  </strong> +61 3 8899 7533</a></li>
+<li><a href="tel:+448008085791"><strong><img src="http://cdn.tokyowheel.comgb.gif" alt="United Kingdom" class=""> United Kingdom <small class='text-muted'>(Toll Free)</small>  </strong> +44 800 808 5791</a></li>
+<li><a href="tel:+43720884764"><strong><img src="http://cdn.tokyowheel.comat.gif" alt="Austria" class=""> Austria  </strong> +43 720 884 764</a></li>
+<li><a href="tel:+3278481705"><strong><img src="http://cdn.tokyowheel.combe.gif" alt="Belgium" class=""> Belgium  </strong> +32 78 481 705</a></li>
+<li><a href="tel:+4589883294"><strong><img src="http://cdn.tokyowheel.comdk.gif" alt="Denmark" class=""> Denmark  </strong> +45 89 88 32 94</a></li>
+<li><a href="tel:+358753251385"><strong><img src="http://cdn.tokyowheel.comfi.gif" alt="Finland" class=""> Finland  </strong> +358 75 325 1385</a></li>
+<li><a href="tel:+33975189179"><strong><img src="http://cdn.tokyowheel.comfr.gif" alt="France" class=""> France  </strong> +33 9 75 18 91 79</a></li>
+<li><a href="tel:+85258084534"><strong><img src="http://cdn.tokyowheel.comhk.gif" alt="Hong Kong" class=""> Hong Kong  </strong> +852 58084534</a></li>
+<li><a href="tel:+353766805787"><strong><img src="http://cdn.tokyowheel.comie.gif" alt="Ireland" class=""> Ireland  </strong> +353 76 680 5787</a></li>
+<li><a href="tel:+390811892137"><strong><img src="http://cdn.tokyowheel.comit.gif" alt="Italy" class=""> Italy  </strong> +39 081 189 2137</a></li>
+<li><a href="tel:+31858884391"><strong><img src="http://cdn.tokyowheel.comnl.gif" alt="Netherlands" class=""> Netherlands  </strong> +31 85 888 4391</a></li>
+<li><a href="tel:+6478083142"><strong><img src="http://cdn.tokyowheel.comnz.gif" alt="New Zealand" class=""> New Zealand  </strong> +64 7 808 3142</a></li>
+<li><a href="tel:+48618803256"><strong><img src="http://cdn.tokyowheel.compl.gif" alt="ydowo, Poland" class=""> Poland  </strong> +48 61 880 32 56</a></li>
+<li><a href="tel:+351308802535"><strong><img src="http://cdn.tokyowheel.compt.gif" alt="Portugal" class=""> Portugal  </strong> +351 308 802 535</a></li>
+<li><a href="tel:+46108848529"><strong><img src="http://cdn.tokyowheel.comse.gif" alt="Sweden" class=""> Sweden  </strong> +46 10 8848529</a></li>
             				</ul>
       					</li>
                     </ul>
@@ -96,8 +96,8 @@
           <div role="navigation" class="navbar-main navbar-default navbar-static-top" id='main-nav'>
               <div class="container">
                   <div class="navbar-header hidden-sm">
-                    <a class="navbar-brand slim hidden-xs" href="/"><img src="{{ 'logo-file.png' | asset_url }}" alt="{{ shop.name }}"></a>
-                    <a class="navbar-brand visible-xs" href="/"><img src="{{ 'logo-file.png' | asset_url }}" alt="{{ shop.name }}"></a>  
+                    <a class="navbar-brand slim hidden-xs" href="/"><img src="http://cdn.tokyowheel.com/logo-file.png" alt="Tokyowheel™"></a>
+                    <a class="navbar-brand visible-xs" href="/"><img src="http://cdn.tokyowheel.com/logo-file.png" alt="Tokyowheel™"></a>  
                    
                     {% comment %}{% unless template contains 'cart' %}
                      <div class='visible-xs pull-right navbar-cart'>
@@ -123,7 +123,7 @@
                 
                 <div class="navbar-header col-sm-12 visible-sm">
                     
-                    <a class="navbar-brand col-sm-12 text-center" href="/"><img src="{{ 'logo-file.png' | asset_url }}" alt="{{ shop.name }}"></a>
+                    <a class="navbar-brand col-sm-12 text-center" href="/"><img src="http://cdn.tokyowheel.com/logo-file.png" alt="Tokyowheel™"></a>
                     
                   </div><!-- navbar header -->
                 
@@ -135,7 +135,7 @@
                      <ul class="nav navbar-nav">
       <li class="">
         <div>
-  <a class='btn {% if cart.item_count == 0 %}btn-primary{% else %}btn-default{% endif %} navbar-btn' href="/pages/wheels" title="Wheels">
+  <a class='btn btn-primary navbar-btn' href="/pages/wheels" title="Wheels">
     Shop Wheels
   </a>
         </div>
@@ -182,24 +182,24 @@
                         <li class="dropdown visible-xs">
                           <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-phone"></i> Call Us 1-877-549-2069 <span class="caret"></span></a>
             				<ul class="dropdown-menu">
-<li><a href="tel:+810345895010"><strong><img src="{{'jp.gif' | asset_url }}" alt="Japan" class=""> Tokyo, Japan  </strong> +81 03 4589 5010</a></li>
-<li><a href="tel:+18775492069"><strong><img src="{{'us.gif' | asset_url }}" alt="USA" class=""> United States <small class='text-muted'>(Toll Free)</small>  </strong> +1 (877) 549-2069</a></li>
-<li><a href="tel:+18775492069"><strong><img src="{{'ca.gif' | asset_url }}" alt="Canada" class=""> Canada <small class='text-muted'>(Toll Free)</small>  </strong> +1 (877) 549-2069</a></li>
-<li><a href="tel:+61388997533"><strong><img src="{{'au.gif' | asset_url }}" alt="Australia" class=""> Australia  </strong> +61 3 8899 7533</a></li>
-<li><a href="tel:+448008085791"><strong><img src="{{'gb.gif' | asset_url }}" alt="United Kingdom" class=""> United Kingdom <small class='text-muted'>(Toll Free)</small>  </strong> +44 800 808 5791</a></li>
-<li><a href="tel:+43720884764"><strong><img src="{{'at.gif' | asset_url }}" alt="Austria" class=""> Austria  </strong> +43 720 884 764</a></li>
-<li><a href="tel:+3278481705"><strong><img src="{{'be.gif' | asset_url }}" alt="Belgium" class=""> Belgium  </strong> +32 78 481 705</a></li>
-<li><a href="tel:+4589883294"><strong><img src="{{'dk.gif' | asset_url }}" alt="Denmark" class=""> Denmark  </strong> +45 89 88 32 94</a></li>
-<li><a href="tel:+358753251385"><strong><img src="{{'fi.gif' | asset_url }}" alt="Finland" class=""> Finland  </strong> +358 75 325 1385</a></li>
-<li><a href="tel:+33975189179"><strong><img src="{{'fr.gif' | asset_url }}" alt="France" class=""> France  </strong> +33 9 75 18 91 79</a></li>
-<li><a href="tel:+85258084534"><strong><img src="{{'hk.gif' | asset_url }}" alt="Hong Kong" class=""> Hong Kong  </strong> +852 58084534</a></li>
-<li><a href="tel:+353766805787"><strong><img src="{{'ie.gif' | asset_url }}" alt="Ireland" class=""> Ireland  </strong> +353 76 680 5787</a></li>
-<li><a href="tel:+390811892137"><strong><img src="{{'it.gif' | asset_url }}" alt="Italy" class=""> Italy  </strong> +39 081 189 2137</a></li>
-<li><a href="tel:+31858884391"><strong><img src="{{'nl.gif' | asset_url }}" alt="Netherlands" class=""> Netherlands  </strong> +31 85 888 4391</a></li>
-<li><a href="tel:+6478083142"><strong><img src="{{'nz.gif' | asset_url }}" alt="New Zealand" class=""> New Zealand  </strong> +64 7 808 3142</a></li>
-<li><a href="tel:+48618803256"><strong><img src="{{'pl.gif' | asset_url }}" alt="ydowo, Poland" class=""> Poland  </strong> +48 61 880 32 56</a></li>
-<li><a href="tel:+351308802535"><strong><img src="{{'pt.gif' | asset_url }}" alt="Portugal" class=""> Portugal  </strong> +351 308 802 535</a></li>
-<li><a href="tel:+46108848529"><strong><img src="{{'se.gif' | asset_url }}" alt="Sweden" class=""> Sweden  </strong> +46 10 8848529</a></li>
+<li><a href="tel:+810345895010"><strong><img src="http://cdn.tokyowheel.comjp.gif" alt="Japan" class=""> Tokyo, Japan  </strong> +81 03 4589 5010</a></li>
+<li><a href="tel:+18775492069"><strong><img src="http://cdn.tokyowheel.comus.gif" alt="USA" class=""> United States <small class='text-muted'>(Toll Free)</small>  </strong> +1 (877) 549-2069</a></li>
+<li><a href="tel:+18775492069"><strong><img src="http://cdn.tokyowheel.comca.gif" alt="Canada" class=""> Canada <small class='text-muted'>(Toll Free)</small>  </strong> +1 (877) 549-2069</a></li>
+<li><a href="tel:+61388997533"><strong><img src="http://cdn.tokyowheel.comau.gif" alt="Australia" class=""> Australia  </strong> +61 3 8899 7533</a></li>
+<li><a href="tel:+448008085791"><strong><img src="http://cdn.tokyowheel.comgb.gif" alt="United Kingdom" class=""> United Kingdom <small class='text-muted'>(Toll Free)</small>  </strong> +44 800 808 5791</a></li>
+<li><a href="tel:+43720884764"><strong><img src="http://cdn.tokyowheel.comat.gif" alt="Austria" class=""> Austria  </strong> +43 720 884 764</a></li>
+<li><a href="tel:+3278481705"><strong><img src="http://cdn.tokyowheel.combe.gif" alt="Belgium" class=""> Belgium  </strong> +32 78 481 705</a></li>
+<li><a href="tel:+4589883294"><strong><img src="http://cdn.tokyowheel.comdk.gif" alt="Denmark" class=""> Denmark  </strong> +45 89 88 32 94</a></li>
+<li><a href="tel:+358753251385"><strong><img src="http://cdn.tokyowheel.comfi.gif" alt="Finland" class=""> Finland  </strong> +358 75 325 1385</a></li>
+<li><a href="tel:+33975189179"><strong><img src="http://cdn.tokyowheel.comfr.gif" alt="France" class=""> France  </strong> +33 9 75 18 91 79</a></li>
+<li><a href="tel:+85258084534"><strong><img src="http://cdn.tokyowheel.comhk.gif" alt="Hong Kong" class=""> Hong Kong  </strong> +852 58084534</a></li>
+<li><a href="tel:+353766805787"><strong><img src="http://cdn.tokyowheel.comie.gif" alt="Ireland" class=""> Ireland  </strong> +353 76 680 5787</a></li>
+<li><a href="tel:+390811892137"><strong><img src="http://cdn.tokyowheel.comit.gif" alt="Italy" class=""> Italy  </strong> +39 081 189 2137</a></li>
+<li><a href="tel:+31858884391"><strong><img src="http://cdn.tokyowheel.comnl.gif" alt="Netherlands" class=""> Netherlands  </strong> +31 85 888 4391</a></li>
+<li><a href="tel:+6478083142"><strong><img src="http://cdn.tokyowheel.comnz.gif" alt="New Zealand" class=""> New Zealand  </strong> +64 7 808 3142</a></li>
+<li><a href="tel:+48618803256"><strong><img src="http://cdn.tokyowheel.compl.gif" alt="ydowo, Poland" class=""> Poland  </strong> +48 61 880 32 56</a></li>
+<li><a href="tel:+351308802535"><strong><img src="http://cdn.tokyowheel.compt.gif" alt="Portugal" class=""> Portugal  </strong> +351 308 802 535</a></li>
+<li><a href="tel:+46108848529"><strong><img src="http://cdn.tokyowheel.comse.gif" alt="Sweden" class=""> Sweden  </strong> +46 10 8848529</a></li>
             				</ul>
       					</li>
 
@@ -238,7 +238,7 @@
                        <li class='visible-xs' style='margin-right:15px;margin-bottom:15px;'>
                          <div class="currency-switcher form-group" stle='height:auto;'>
   <select id="currencies2" name="currencies" class="form-control">
-  	<option value="{{ shop.currency }}" selected="selected">{{ shop.currency }}</option>
+  	<option value="USDD" selected="selected">USDD</option>
     <option value="ARS">ARS</option>
     <option value="ANG">ANG</option>
     <option value="AUD">AUD</option>
@@ -261,24 +261,24 @@
     </ul>
     <ul class="nav navbar-nav navbar-right">
      
-      {% unless template contains 'cart' %}
+      <%# {% unless template contains 'cart' %}%>
       <li class=''>
          <div>
            <a href="/cart" class="btn btn-success navbar-btn" style='margin-right:15px;' >
-              <span><i class="fa fa-shopping-cart fa-lg"></i> {% if cart.item_count != 0 %}<span class='badge'>{{ cart.item_count }}</span>{% endif %}<span class="visible-xs"> Shopping Cart</span></span>
+            <%#  <span><i class="fa fa-shopping-cart fa-lg"></i> {% if cart.item_count != 0 %}<span class='badge'>{{ cart.item_count }}</span>{% endif %}<span class="visible-xs"> Shopping Cart</span></span>%>
             </a>
          </div>
           </li>
-      {% endunless %}
+       <%#{% endunless %}%>
       {% comment %} <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              <img src="{{'en-flag.png' | asset_url }}" alt="English" class=""> <span class="caret"></span>
+              <img src="http://cdn.tokyowheel.comen-flag.png" alt="English" class=""> <span class="caret"></span>
             </a>
           <ul class="dropdown-menu">
-              <li><a href="http://www.tokyowheel.com"><img src="{{'en-flag.png' | asset_url }}" alt="English" class=""> {% include '__localize' with 'English' %}</a></li>
-				<li><a href="http://www.tokyowheel.jp"><img src="{{'jp-flag.png' | asset_url }}" alt="日本語" class=""> {% include '__localize' with '日本語' %}</a></li>
+              <li><a href="http://www.tokyowheel.com"><img src="http://cdn.tokyowheel.comen-flag.png" alt="English" class=""> English</a></li>
+				<li><a href="http://www.tokyowheel.jp"><img src="http://cdn.tokyowheel.comjp-flag.png" alt="日本語" class=""> 日本語</a></li>
             </ul>
-      </li>{% endcomment %}
+      </li>
       
     </ul> 
     
@@ -289,8 +289,6 @@
 <!-- end new navigation -->
 
 
-</nav>
-<nav class="">
   <ul id="main-nav-bar" class="inline" data-hook>
     <li id="home-link" data-hook><%= link_to Spree.t(:home), spree.root_path %></li>
     <li id="link-to-cart" data-hook>
@@ -301,4 +299,7 @@
     </li>
     <script>Spree.fetch_cart()</script>
   </ul>
+
 </nav>
+
+
