--- a/app/views/spree/shared/_head.html.erb
+++ b/app/views/spree/shared/_head.html.erb
@@ -5,10 +5,10 @@
 <%== meta_data_tags %>
 <%= canonical_tag(current_store.url) %>
 <%= favicon_link_tag 'favicon.ico' %>
-<%= stylesheet_link_tag 'spree/frontend/all', :media => 'screen' %>
-<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"> 
+<%= stylesheet_link_tag 'tkwl', :media => 'screen' %>
+<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 <%= csrf_meta_tags %>
-<%= javascript_include_tag 'spree/frontend/all' %>
+<%= javascript_include_tag 'tkwl' %>
 
 <meta property="og:url" content="<%= current_store.url %>"/>
   <meta property="og:title" content="<%= title %>"/>
